--- a/templates/main.html
+++ b/templates/main.html
@@ -15,6 +15,8 @@
         </form>
         <form action="/dbs" method="post">
             <input type="submit" value="Predict DBS price">
+        <form action="/telegram" method="post">
+            <input type="submit" value="Start Telegram">
         </form>
     </div>
 </body>
