--- a/templates/main.html
+++ b/templates/main.html
@@ -15,6 +15,7 @@
         </form>
         <form action="/dbs" method="post">
             <input type="submit" value="Predict DBS price">
+        </form>
         <form action="/telegram" method="post">
             <input type="submit" value="Start Telegram">
         </form>
