modified html file

--- a/templates/telegram.html
+++ b/templates/telegram.html
@@ -11,5 +11,8 @@
         <form action="/main" method="post">
             <input type="submit" value="Main">
         </form>
+        <form action="/stop_telegram" method="post">
+            <input type="submit" value="Stop Telegram">
+        </form>
     </div>
 </body>
