--- a/templates/main.html
+++ b/templates/main.html
@@ -19,5 +19,17 @@
         <form action="/telegram" method="post">
             <input type="submit" value="Start Telegram">
         </form>
+        <form action="/check_spam" method="post">
+            <input type="submit" value="Check Spam">
+        </form>
+        <form action="/stop_telegram" method="post">
+            <input type="submit" value="Stop Telegram">
+        </form>
+        <form action="/user_log" method="post">
+            <input type="submit" value="USER LOGS">
+        </form>
+        <form action="/delete_log" method="post">
+            <input type="submit" value="DELETE LOGS">
+        </form>
     </div>
 </body>
