--- a/templates/main.html
+++ b/templates/main.html
@@ -31,5 +31,8 @@
         <form action="/delete_log" method="post">
             <input type="submit" value="DELETE LOGS">
         </form>
+        <form action="/sepia_hf" method="post">
+            <input type="submit" value="Sepia HuggingFace">
+        </form>
     </div>
 </body>
